test/invalid-syntax/58248_leading_zero/leading_zero.mag
-- Author: 58248, Afonso Topa 
-- Leading zeroes are not allowed

const n : Int = 010

fun main(_) : Unit -> Unit = print(n)
   
